--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPAjUKdZQd5UpymCUR5cAQz",
+      "authorship_tag": "ABX9TyPRRfykoQjwSJTFUdJRtLnT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,30 +34,30 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Hb1fAg-9F7t4",
-        "outputId": "9cb1ebbc-5299-4599-c89a-35f589038452"
+        "outputId": "b75f4470-1414-4487-ab84-44a0cbf5a957"
       },
       "source": [
         "import numpy as np\n",
         "A = np.array([5,3,-1])\n",
         "\n",
-        "print('size of array:', A.size)\n",
+        "print(A.size)\n",
         "\n",
-        "print('type of array:', type(A))\n",
+        "print(type(A))\n",
         "\n",
-        "print('shape of array:', A.shape)\n",
+        "print(A.shape)\n",
         "\n",
-        "print('dimension of array:', A.ndim)"
+        "print(A.ndim)"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "size of array: 3\n",
-            "type of array: <class 'numpy.ndarray'>\n",
-            "shape of array: (3,)\n",
-            "dimension of array: 1\n"
+            "3\n",
+            "<class 'numpy.ndarray'>\n",
+            "(3,)\n",
+            "1\n"
           ]
         }
       ]
