--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPRRfykoQjwSJTFUdJRtLnT",
+      "authorship_tag": "ABX9TyOmtfoDl05aB4ZYA8P3A1+E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,13 +34,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Hb1fAg-9F7t4",
-        "outputId": "b75f4470-1414-4487-ab84-44a0cbf5a957"
+        "outputId": "96bf812f-24ee-4e2a-b8e4-77e42b04b19f"
       },
       "source": [
         "import numpy as np\n",
         "A = np.array([5,3,-1])\n",
         "\n",
-        "print(A.size)\n",
+        "print('Number:', A.size)\n",
         "\n",
         "print(type(A))\n",
         "\n",
@@ -48,13 +48,13 @@
         "\n",
         "print(A.ndim)"
       ],
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "3\n",
+            "Number: 3\n",
             "<class 'numpy.ndarray'>\n",
             "(3,)\n",
             "1\n"
